--- a/requirements-tf.txt
+++ b/requirements-tf.txt
@@ -1,13 +1,13 @@
 setuptools>=41.0.0
 pip>=10.0
-numpy>=1.20.0
+numpy==1.20.0
 scipy==1.4.1
 matplotlib
 pandas>=0.24.1
 scikit-learn==0.24.2
-statsmodels>=0.9.0
+statsmodels==0.9.0
 seaborn
-Cython>=0.28.0
+Cython==0.28.0
 xgboost
 pydotplus
 tqdm
